other/restrict-kubernetes-dashboard/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod
spec:
  containers:
  - name: my-app-container
    image: nginx
