other/restrict-kubernetes-dashboard/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-kubernetes-dashboard
status:
  ready: true
